--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_31.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_31.yml
@@ -161,3 +161,38 @@ databaseChangeLog:
           - sql:
               sql: |-
                 INSERT INTO private_health_insurance_plan(private_health_insurance_id,plan) SELECT * FROM private_health_insurance WHERE plan NOTNULL;
+
+    - changeSet:
+        id: add-private_health_insurance_plan_id-column-private_health_insurance_details
+        author: mvenere
+        changes:
+          - addColumn:
+              tableName: private_health_insurance_details
+              columns:
+                - column:
+                    name: private_health_insurance_plan_id
+                    type: int
+          - addForeignKeyConstraint:
+              baseColumnNames: private_health_insurance_plan_id
+              baseTableName:  private_health_insurance_details
+              constraintName: FK_private_health_insurance_details_private_health_insurance_plan_id
+              onDelete: NO ACTION
+              onUpdate: NO ACTION
+              referencedColumnNames: id
+              referencedTableName: private_health_insurance_plan
+              validate: true
+
+    - changeSet:
+        id: modifying-private_health_insurance_details-data
+        comment: Actualizar datos private_health_insurance_details
+        author: mvenere
+        context: "!schema-only"
+        changes:
+          - sql:
+              sql: |-
+                UPDATE private_health_insurance_details phid
+                SET private_health_insurance_plan_id  = phip.id
+                FROM private_health_insurance_plan phip
+                JOIN patient_medical_coverage pmc
+                ON pmc.medical_coverage_id = phip.private_health_insurance_id
+                WHERE phid.id = pmc.private_health_insurance_details_id
