--- a/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/back-end/app/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -164,3 +164,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_31.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_32.yml
+    relativeToChangelogFile: true
