--- a/back-end/app/src/main/resources/application-dev.properties
+++ b/back-end/app/src/main/resources/application-dev.properties
@@ -7,9 +7,10 @@ token.secret=${TOKEN_SECRET:ultra_secret_token}
 # spring.jpa.show-sql=true
 # Para ver valores bindeados
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-management.endpoints.web.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health,info,env,loggers}
-management.endpoints.jmx.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health,info,env,loggers}
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.endpoints.web.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health,info,env,loggers, metrics, prometheus }
+management.endpoints.jmx.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health,info,env,loggers, metrics, prometheus }
 management.endpoint.loggers.enabled=true
 
 # ===============================
