tg-6056 [BE] Agregar funciones de Full text search a dialecto de PostgreSQL

--- a/back-end/app/src/main/resources/application.properties
+++ b/back-end/app/src/main/resources/application.properties
@@ -50,7 +50,7 @@ spring.datasource.hikari.maximumPoolSize=${HICKARI_MAXIMUM_POOL_SIZE:3}
 spring.datasource.url=jdbc:postgresql://${DATABASE_IP_PORT:localhost:5432}/${DATABASE_SCHEMA:hospitalDB}
 spring.datasource.username=${DATABASE_USER:postgres}
 spring.datasource.password=${DATABASE_PASS:Local123}
-spring.jpa.database-platform=net.pladema.sgx.repository.dialect.CustomPostgreSQLDialect
+spring.jpa.database-platform=ar.lamansys.sgx.shared.repositories.dialect.CustomPostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #drop n create table again, good for testing, comment this in production
