tg-6036 [DB] Crear índice para tabla snomed

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_33.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_33.yml
@@ -139,3 +139,12 @@ databaseChangeLog:
                     columnName: last_update
                     tableName: snomed_related_group
                     validate: true
+
+    - changeSet:
+          id: createIndex-snomed
+          author: tmedina
+          dbms: postgresql
+          changes:
+              - sql:
+                    sql: |-
+                        CREATE INDEX IDX_snomed_pt ON snomed USING GIN (to_tsvector('spanish', pt));
