tg-6063. [BE] Agregar propiedades configuradas al backoffice.

--- a/back-end/app/src/main/resources/application-prod.properties
+++ b/back-end/app/src/main/resources/application-prod.properties
@@ -15,3 +15,8 @@ ws.nomivac.synchronization.url=https://bus-dev.msal.gob.ar/fhir/
 google.recaptcha.enable = true
 
 ws.sisa.snvs.environment=PROD
+
+
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.endpoint.loggers.enabled=true
