--- a/back-end/app/src/main/resources/application.properties
+++ b/back-end/app/src/main/resources/application.properties
@@ -71,8 +71,8 @@ spring.jpa.hibernate.ddl-auto=validate
 
 
 management.endpoint.metrics.enabled=false
-management.endpoints.web.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health,info}
-management.endpoints.jmx.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health,info}
+management.endpoints.web.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health, info, env}
+management.endpoints.jmx.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health, info, env}
 management.endpoint.prometheus.enabled=false
 management.metrics.export.prometheus.enabled=false
 management.health.mail.enabled=false
