tg-6062 Permisos para demo de extensiones

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     build: ./front-end
     container_name: hsi-frontend
     environment:
-      API_IP_PORT: host.docker.internal:8080
+      API_IP_PORT: hsi-backend:8080
     ports:
       - "4200:8280"
 
