tg-6000 Agrega insignia del usuario

--- a/front-end/apps/tsconfig.json
+++ b/front-end/apps/tsconfig.json
@@ -30,6 +30,9 @@
 			"@presentation/*": [
 				"projects/hospital/src/app/modules/presentation/*"
 			],
+			"@api-presentation/*": [
+				"projects/hospital/src/app/modules/api-presentation/*"
+			],
 			"@historia-clinica/*": [
 				"projects/hospital/src/app/modules/historia-clinica/*"
 			],
