tg-6129. [BE] Agregar descripción de las propiedades

--- a/back-end/app/src/main/resources/application.properties
+++ b/back-end/app/src/main/resources/application.properties
@@ -15,12 +15,6 @@ springdoc.use-fqn=true
 # ============= API =============
 server.servlet.context-path=/api
 server.port = ${SERVER_PORT:8080}
-api.domain=${API_DOMAIN:/api}
-api.auth=/auth
-api.user=/users
-api.user.activateUser=/enable
-api.password=/passwords
-api.password.reset=/reset
 
 admin.password=${ADMIN_PASS:admin123}
 
@@ -38,11 +32,6 @@ app.mail.activate=${ACTIVATE_SENDING_EMAIL:false}
 
 
 mail.from=${SMTP_EMAIL:sgh@test.org}
-
-# ===============================
-# = FRONTEND
-# ===============================
-frontend.loginpage=${LOGIN_PAGE:/}
 
 # ===============================
 # = Jackson
@@ -63,7 +52,6 @@ spring.datasource.username=${DATABASE_USER:postgres}
 spring.datasource.password=${DATABASE_PASS:Local123}
 spring.jpa.database-platform=net.pladema.sgx.repository.dialect.CustomPostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.validationQuery = SELECT 1
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
@@ -73,8 +61,9 @@ spring.jpa.hibernate.ddl-auto=validate
 management.endpoint.metrics.enabled=false
 management.endpoints.web.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health, info, env}
 management.endpoints.jmx.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health, info, env}
-management.endpoint.prometheus.enabled=false
-management.metrics.export.prometheus.enabled=false
+management.endpoint.prometheus.enabled=true
+management.endpoint.loggers.enabled=true
+management.metrics.export.prometheus.enabled=true
 management.health.mail.enabled=false
 management.endpoint.health.show-details=always
 management.info.git.mode=full
@@ -82,8 +71,8 @@ management.info.git.mode=full
 actuator.configuration.whitelist=${ACTUATOR_WHITELIST:0:0:0:0:0:0:0:1}
 actuator.configuration.authenticated=${ACTUATOR_REQUIRED_AUTHENTICATION:false}
 
-app.default.language=${DEFAULT_LANGUAGE:es-AR}
-app.other.languages=${OTHER_LANGUAGES:en-US}
+app.default.language=${DEFAULT_LANGUAGE:es}
+app.other.languages=${OTHER_LANGUAGES:US}
 
 # ===============================
 # reCaptcha Google
