tg-6098 [BD] modificar tipos de discharge date en la tabla de patient discharge

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_32.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_32.yml
@@ -115,3 +115,21 @@ databaseChangeLog:
                     referencedColumnNames: id
                     referencedTableName: patient_medical_coverage
                     validate: true
+                    
+    - changeSet:
+          id: update-type-field-administrative_discharge_date
+          author: flizalde
+          changes:
+            - modifyDataType:
+                columnName: administrative_discharge_date
+                newDataType: datetime
+                tableName: patient_discharge
+
+    - changeSet:
+          id: update-type-field-medical_discharge_date
+          author: flizalde
+          changes:
+            - modifyDataType:
+                columnName: medical_discharge_date
+                newDataType: datetime
+                tableName: patient_discharge
