tg-6210 [BD] Agregar columna prefix en appointment

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_33.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_33.yml
@@ -10,3 +10,14 @@ databaseChangeLog:
                 - column:
                     name: phone_prefix
                     type: varchar(10)
+
+    - changeSet:
+        id: add-phone_prefix-column-appointment
+        author: mvenere
+        changes:
+          - addColumn:
+              tableName: appointment
+              columns:
+                - column:
+                    name: phone_prefix
+                    type: varchar(10)
