--- a/back-end/sgx-shared/pom.xml
+++ b/back-end/sgx-shared/pom.xml
@@ -225,6 +225,12 @@
 			<artifactId>maven-model</artifactId>
 			<version>2.0.5</version>
 		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
     </dependencies>
 	<build>
 		<plugins>
