--- a/back-end/interoperability/pom.xml
+++ b/back-end/interoperability/pom.xml
@@ -134,6 +134,13 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.8</version>
+        </dependency>
+
     </dependencies>
 
     <build>
