--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,10 @@
 *.sh    text eol=lf
 # Batch scripts require CRLF
 *.bat   text eol=crlf
+# 2010
+*.txt -crlf
+
+# 2020
+*.txt text eol=lf
+*.ts text eol=lf
+*.js text eol=lf
