--- a/back-end/hospital-shared/pom.xml
+++ b/back-end/hospital-shared/pom.xml
@@ -74,5 +74,12 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+		<dependency>
+			<groupId>ar.lamansys</groupId>
+			<artifactId>sgx-mqtt</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
     </dependencies>
 </project>
