--- a/cubejs/Dockerfile
+++ b/cubejs/Dockerfile
@@ -8,5 +8,6 @@ ENV CUBEJS_WEB_SOCKETS=true
 ENV CUBEJS_DEV_MODE=true
 ENV CUBEJS_DB_TYPE=postgres
 ENV CUBEJS_API_SECRET=a36e649cedd441107c7531ec2da8415e592f19e9f93c250f001e9c40a660694892a3f78ccd8c027ae8504453ba25ebd0de47467a984bf98176c3197a9ffd685d
+ENV CUBEJS_JWT_ALGS=HS512
 
 COPY schema/ /cube/conf/schema/
