--- a/front-end/apps/package.json
+++ b/front-end/apps/package.json
@@ -31,9 +31,9 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "angular-calendar": "^0.28.28",
+    "angular-oauth2-oidc": "^12.1.0",
     "chart.js": "^2.9.4",
     "date-fns": "^2.28.0",
-    "angular-oauth2-oidc": "^12.1.0",
     "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
@@ -50,6 +50,7 @@
     "@angular/cli": "~12.2.10",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
+    "@types/jest": "^27.4.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
