--- a/back-end/app/src/main/resources/application-dev.properties
+++ b/back-end/app/src/main/resources/application-dev.properties
@@ -1,7 +1,18 @@
-# Documentos de internacion
+# =============================================================================
+# Parametros obligatorios
+# =============================================================================
+## Documentos de internacion
 internment.document.directory = ${DOCUMENT_ROOT_DIRECTORY:temp}
+## Clave secreta única por dominio/ambiente
 token.secret=${TOKEN_SECRET:ultra_secret_token}
 
+# =============================================================================
+# Parametros aconsejados para desarrollo
+# =============================================================================
+# Habilitar Actuator
+management.endpoints.web.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health,info,env,loggers}
+management.endpoints.jmx.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health,info,env,loggers}
+management.endpoint.loggers.enabled=true
 
 # Para ver las consultas
 # spring.jpa.show-sql=true
@@ -11,8 +22,9 @@ management.endpoints.web.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health, i
 management.endpoints.jmx.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health, info, env, loggers, metrics, prometheus }
 
 # ===============================
-# FEDERAR SERVICE
+# Integraciones
 # ===============================
+# Federar
 ws.federar.url.base=https://testapp.hospitalitaliano.org.ar
 ws.federar.sisaCode=10002001110000
 ws.federar.claims.iss=http://www.msal.gov.ar
@@ -20,15 +32,15 @@ ws.federar.claims.sub=Ministerio de Salud de la Nación
 ws.federar.claims.name=Prueba Jose
 ws.federar.claims.role=Project Manager
 ws.federar.claims.ident=0001
-
 ws.federar.auth.signKey=federar
 
-# ===============================
-# SNOWSTORM SERVICE
-# ===============================
+# Snowstorm
 ws.snowstorm.url.base=https://snowstorm-test.msal.gob.ar
 
+# Extensiones
+hsi.extensions.rest.url=demo
+
+# Tableros
+app.gateway.cubejs.apiUrl=http://localhost:4000/cubejs-api/v1
 
 habilitar.boton.consulta=true
-hsi.extensions.rest.url=demo
-app.gateway.cubejs.apiUrl=${CUBEJS_URL:http://localhost:4000/cubejs-api/v1}
