--- a/back-end/sgx-mqtt/src/main/resources/sgx-mqtt.properties
+++ b/back-end/sgx-mqtt/src/main/resources/sgx-mqtt.properties
@@ -1,3 +1,3 @@
-mqtt.publisher_id=test
-mqtt.server_address=ws://127.0.0.1:9001
-mqtt.client_connection=false
+mqtt.publisher_id=${MQTT_PUBLISHER_ID:test}
+mqtt.server_address=${MQTT_SERVER_ADDRESS:ws://127.0.0.1:9001}
+mqtt.client_connection=${MQTT_CLIENT_CONNECTION:false}
