--- a/back-end/app/src/main/resources/application-dev.properties
+++ b/back-end/app/src/main/resources/application-dev.properties
@@ -20,6 +20,8 @@ management.endpoint.loggers.enabled=true
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 management.endpoints.web.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health, info, env, loggers, metrics, prometheus }
 management.endpoints.jmx.exposure.include=${ACTUATOR_ENABLED_ENDPOINTS:health, info, env, loggers, metrics, prometheus }
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
 
 # ===============================
 # Integraciones
