--- a/back-end/sgx-shared/src/main/resources/sgx_shared.properties
+++ b/back-end/sgx-shared/src/main/resources/sgx_shared.properties
@@ -59,3 +59,6 @@ server.compression.enabled=true
 # The comma-separated list of mime types that should be compressed
 server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
 # Compress the response only if the response size is at least 1KB
+
+
+app.system.properties.cron.config=0 0/10 * * * *
