tg-6389 Formateo de código y propiedades

--- a/back-end/app/src/main/resources/application-dev.properties
+++ b/back-end/app/src/main/resources/application-dev.properties
@@ -26,7 +26,11 @@ management.metrics.export.prometheus.enabled=true
 # ===============================
 # Integraciones
 # ===============================
+
+ws.renaper.enabled=${ENABLE_RENAPER:false}
+
 # Federar
+ws.federar.enabled=${ENABLE_FEDERAR:false}
 ws.federar.url.base=https://testapp.hospitalitaliano.org.ar
 ws.federar.sisaCode=10002001110000
 ws.federar.claims.iss=http://www.msal.gov.ar
@@ -43,6 +47,9 @@ ws.snowstorm.url.base=https://snowstorm-test.msal.gob.ar
 hsi.extensions.rest.url=demo
 
 # Tableros
-app.gateway.cubejs.apiUrl=http://localhost:4000/cubejs-api/v1
+app.gateway.cubejs.apiUrl=${CUBEJS_URL:http://localhost:4000/cubejs-api/v1}
+
+# Feature flag turnero
+app.feature.HABILITAR_LLAMADO=${HABILITAR_LLAMADO:true}
 
 habilitar.boton.consulta=true
